clusters/dev-k8s/angular-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular     
  namespace: my-application
spec:
  replicas: 1             
  selector:
    matchLabels:
      app: frontend      
  template:
    metadata:
      labels:
        app: frontend    
    spec:
      containers:
      - image: chedi1/angular:v1.0.0
        imagePullPolicy: IfNotPresent
        name: angular                           
        ports:
        - containerPort: 4200
