clusters/dev-k8s/angular-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service 
  namespace: my-application   
spec:
  selector:
    app: frontend         
  ports:
  - protocol: TCP
    port: 80                 
    targetPort: 4200        
    nodePort: 30001          
  type: NodePort
