clusters/dev-k8s/angular-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  namespace: my-application
  annotations:
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: sim.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: angular-service
            port:
              number: 80
  tls:
  - hosts:
    - sim.com
    secretName: sim-tls-secret
